[package]
name = "yaat-color"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
indexmap = { version = "2.12.1", features = ["serde"] }
owo-colors = "4.2.3"
palette = "0.7.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.148", features = ["indexmap"] }
