[package]
name = "yaat-color"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
color-eyre = "0.6.5"
dialoguer = { version = "0.12.0", optional = true }
directories = { version = "6.0.0", optional = true }
glob = "0.3.3"
indexmap = { version = "2.12.1", features = ["serde"] }
owo-colors = "4.2.3"
palette = { version = "0.7.6", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.148", features = ["indexmap"] }

[features]
default = []
seq_win = ["dep:dialoguer"]
config = ["dep:directories"]

[profile.release]
lto = true
opt-level = 3
incremental = false
